# SeeSawML

./: .gitignore  .pre-commit-config.yaml  README.md  config.sh  pyproject.toml
docs/: README.md  mkdocs.yml  requirements.txt
docs/docs/: index.md  significance.md
docs/docs/api/fakes/: analysis.md  models.md  preparation.md  toys.md  training.md
docs/docs/api/models/: deep_sets.md  linear_models.md  preprocessing.md  training.md
docs/docs/api/models/transformers/: attention.md  transformer_models.md
docs/docs/api/signal/: models.md  plotting.md  preperation.md  training.md
docs/docs/api/utils/: helpers.md  lxplus_condor.md  other.md  plotting.md
docs/docs/config/: config_yaml.md
docs/docs/config/config_options/: dataset.md  hdf5_conversion.md  models.md  plotting.md  training.md
docs/docs/data_pipeline/: dataset.md  hdf5_conversion.md  type_masking.md
docs/docs/evaluation/: onnx.md  plotting.md
docs/docs/examples/: model_configs.md  tnanalysis.md
docs/docs/images/: workflow.drawio
docs/docs/models/: deep_sets.md  embeddings.md  mlp.md  models.md  transformers.md
docs/docs/start/: config_yaml.md  install.md  lxplus.md  run.md
docs/docs/training/: training.md
seesaw/fakes/: utils.py
seesaw/fakes/analysis/: logit_regions.py  opendata_SR.py  plot_density_ratio.py  plot_model_ff.py  ratio_closure.py
seesaw/fakes/dataset/: dataset_scaling.py  hdf5_converter.py  hdf5_opendata_converter.py  plot_fakes.py
seesaw/fakes/models/: crack_veto_model.py  dre_classifiers.py  loss.py  model_to_onnx.py  pt_sliced_model.py
seesaw/fakes/toys/: distributions.py  make_dataset.py  plotting.py
seesaw/fakes/training/: fakes_trainer.py  run_pt_sliced_training.py  run_training.py  tracker_plotting.py  trackers.py
seesaw/models/: calibration.py  deep_sets.py  disco.py  ensembles.py  flat_preprocessor.py  jagged_preprocessor.py  layers.py  losses.py  lr_schedulers.py  masked_batchnorm.py  mlp.py  nn_modules.py  ple.py  res_net.py  tracker.py  utils.py
seesaw/models/transformers/: attention.py  event_transformer.py  ff_blocks.py  jagged_transformer.py  pairwise_features.py  particle_transformer.py  set_attention.py  set_transformer.py
seesaw/signal/: utils.py
seesaw/signal/dataset/: class_weights.py  dataset_scaling.py  hdf5_converter.py  plot_signal.py  qauntiles.py  quantiles.py
seesaw/signal/models/: model_to_onnx.py  sig_bkg_classifiers.py
seesaw/signal/training/: calibrate.py  group_plotting.py  plot_pairwise.py  sig_bkg_trainer.py  tracker_plotting.py  trackers.py
seesaw/utils/: constants.py  download_open_data.py  dsid_store.py  features.py  helpers.py  hydra_initalize.py  labels.py  loggers.py  onnx_utils.py  pile_statistics.py  plot_piles.py  plots_utils.py  trainer_utils.py  tuning.py
seesaw/utils/setup/: run_setup.py  setup.sh
seesaw/utils/submit/: condor_handler.py  condor_submit.py
seesawml/fakes/: utils.py
seesawml/fakes/analysis/: logit_regions.py  opendata_SR.py  plot_density_ratio.py  plot_model_ff.py  ratio_closure.py
seesawml/fakes/dataset/: dataset_scaling.py  hdf5_converter.py  hdf5_opendata_converter.py  plot_fakes.py
seesawml/fakes/models/: crack_veto_model.py  dre_classifiers.py  loss.py  model_to_onnx.py  pt_sliced_model.py
seesawml/fakes/toys/: make_dataset.py  plotting.py
seesawml/fakes/training/: fakes_trainer.py  run_pt_sliced_training.py  run_training.py  tracker_plotting.py  trackers.py
seesawml/inference/: __init__.py  wrappers.py
seesawml/inference/onnx/: __init__.py  config_extractors.py  constants.py  export.py  input_builders.py  metadata.py  scaler_utils.py  utils.py
seesawml/models/: activations.py  calibration.py  deep_sets.py  ensembles.py  flat_preprocessor.py  jagged_preprocessor.py  layers.py  lr_schedulers.py  mlp.py  nn_modules.py  optimizers.py  ple.py  res_net.py  utils.py
seesawml/models/transformers/: attention.py  event_transformer.py  ff_blocks.py  pairwise_features.py  particle_transformer.py  set_transformer.py
seesawml/signal/dataset/: class_weights.py  dataset_scaling.py  hdf5_converter.py  plot_pairwise.py  plot_signal.py  quantiles.py
seesawml/signal/models/: model_to_onnx.py  sig_bkg_classifiers.py
seesawml/signal/training/: calibrate.py  group_plotting.py  sig_bkg_trainer.py  significance.py  tracker_plotting.py  trackers.py
seesawml/utils/: download_open_data.py  features.py  labels.py  loggers.py  onnx_utils.py  pile_statistics.py  plot_piles.py  trainer_utils.py
seesawml/utils/setup/: motd.txt  run_setup.py  setup.sh
seesawml/utils/submit/: condor_submit.py
