[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SeeSawML"
version = "0.1.0"
dependencies = [
    "torch==2.8.0",
    "lightning==2.5.3",
    "mlflow==3.6.0",
    "comet_ml==3.49.9",
    "scikit-learn==1.6.1",
    "imbalanced-learn==0.13.0",
    "onnx==1.16.2",
    "onnxruntime==1.20.1",
    "onnxscript==0.3.2",
    "torchmetrics==1.7.1",
    "torcheval==0.0.7",
    "hydra-core==1.3.2",
    "optuna==4.1.0",
    "optuna-integration==4.1.0",
    "optuna-dashboard==0.17.0",
    "einops==0.8.0",
    "psutil>=6.1.0",
    "f9columnar==0.3.12",
    "atlasopenmagic==1.3.0",
    "pytorch-optimizer==3.7.0",
    "pytdigest==0.1.4",
]
requires-python = ">=3.10,<3.13"
authors = [{ name = "Jan Gavranovic", email = "jan.gavranovic@cern.ch" }]

description = "Machine learning for the SeeSaw analysis"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[project.optional-dependencies]
jupyter = ["ipython>=8.21.0", "ipywidgets>=8.1.1", "jupyterlab>=4.0.11"]
dev = ["mypy>=1.13.0", "pre-commit>=4.0.1", "pytest>=8.3.3", "yamlfix>=1.17.0"]

[tool.setuptools.packages]
find = { include = ["seesaw", "seesaw.*"] }

[project.urls]
Repository = "https://gitlab.cern.ch/atlas-dch-seesaw-analyses/SeeSawML"

[tool.ruff]
src = ["seesaw"]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = [
    "D203",   # one-blank-line-before-class (conflicting with no-blank-line-before-class)
    "D213",   # multi-line-summary-second-line (conflicting with multi-line-summary-first-line)
    "FBT001", # boolean-positional-arg-in-function-definition (not wanted)
    "FBT002", # boolean-default-value-in-function-definition (not wanted)
    "N812",   # lowercase-imported-as-non-lowercase (not wanted)
    "S301",   # suspicious-pickle-usage (not wanted)
    "S603",   # subprocess-without-shell-equals-true (not wanted)
    "E731",   # lambda assignment
    "E203",   # whitespace before ':'
    "E402",   # module level import not at top of file
    "E712",   # comparison to True
    "F401",   # module imported but unused
    "E501",   # line too long
    "E741",   # ambiguous variable name
    "F841",   # local variable name is assigned to but never used
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/python"
explicit_package_bases = true
strict = false
pretty = true
no_implicit_reexport = false
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
ignore_missing_imports = true

[tool.yamlfix]
allow_duplicate_keys = true
line_length = 120
none_representation = "null"
explicit_start = false
section_whitelines = 1
comments_whitelines = 1
sequence_style = "block_style"
quote_basic_values = true
quote_representation = "'"

[project.scripts]
seesaw_ml_setup = "seesaw.utils.setup.run_setup:main"
condor_ml_sub = "seesaw.utils.submit.condor_submit:main"
pile_stats = "seesaw.utils.pile_statistics:main"
plot_piles = "seesaw.utils.plot_piles:main"
plot_fakes = "seesaw.fakes.dataset.plot_fakes:main"
plot_signal = "seesaw.signal.dataset.plot_signal:main"
plot_toy_fakes = "seesaw.fakes.toys.plotting:main"
convert_toy_fakes = "seesaw.fakes.toys.make_dataset:main"
convert_fakes = "seesaw.fakes.dataset.hdf5_converter:main"
convert_open_data = "seesaw.fakes.dataset.hdf5_opendata_converter:main"
scale_fakes = "seesaw.fakes.dataset.dataset_scaling:main"
train_fakes_model = "seesaw.fakes.training.fakes_trainer:main"
train_fakes = "seesaw.fakes.training.run_training:main"
train_pt_sliced_fakes = "seesaw.fakes.training.run_pt_sliced_training:main"
fakes_closure = "seesaw.fakes.analysis.ratio_closure:main"
fakes_opendata_SR = "seesaw.fakes.analysis.opendata_SR:main"
plot_fakes_model_ff = "seesaw.fakes.analysis.plot_model_ff:main"
plot_fakes_density_ratio = "seesaw.fakes.analysis.plot_density_ratio:main"
onnx_fakes = "seesaw.fakes.models.model_to_onnx:main"
convert_signal = "seesaw.signal.dataset.hdf5_converter:main"
calculate_class_weights = "seesaw.signal.dataset.class_weights:main"
calculate_quantiles = "seesaw.signal.dataset.quantiles:main"
scale_signal = "seesaw.signal.dataset.dataset_scaling:main"
train_signal = "seesaw.signal.training.sig_bkg_trainer:main"
onnx_signal = "seesaw.signal.models.model_to_onnx:main"
download_open_data = "seesaw.utils.download_open_data:main"
