[project]
name = "SeeSawML"
version = "1.3.0"
description = "Machine learning for the SeeSaw analysis"
authors = [{ name = "Jan Gavranovic", email = "jan.gavranovic@cern.ch" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
keywords = ["physics", "hep", "machine-learning", "analysis", "atlas", "cern"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.9.0,<2.10.0",
    "lightning>=2.5.3,<3",
    "mlflow>=3.6.0,<4",
    "comet_ml>=3.49.9,<4",
    "scikit-learn>=1.6.1,<2",
    "imbalanced-learn>=0.14.0,<1",
    "onnx>=1.16.2,<2",
    "onnxruntime>=1.20.1,<2",
    "onnxscript>=0.3.2,<1",
    "torchmetrics>=1.7.1,<2",
    "torcheval>=0.0.7,<1",
    "hydra-core>=1.3.2,<2",
    "optuna>=4.1.0,<5",
    "optuna-integration>=4.1.0,<5",
    "optuna-dashboard>=0.17.0,<1",
    "einops>=0.8.0,<1",
    "psutil>=6.1.0,<7",
    "atlasopenmagic>=1.3.0,<2",
    "pytorch-optimizer>=3.7.0,<4",
    "pytdigest>=0.1.4,<1",
]

[project.urls]
Repository = "https://gitlab.cern.ch/atlas-dch-seesaw-analyses/SeeSawML"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["seesawml/**/*.py", "seesawml/py.typed"]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.optional-dependencies]
torch-cpu = ["torch>=2.9.0,<2.10.0"]
torch-cu126 = ["torch>=2.9.0,<2.10.0"]
torch-cu128 = ["torch>=2.9.0,<2.10.0"]
torch-cu130 = ["torch>=2.9.0,<2.10.0"]
f9columnar = ["f9columnar"]
jupyter = [
    "ipython>=8.21.0,<9",
    "ipywidgets>=8.1.1,<9",
    "jupyterlab>=4.0.11,<5",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0,<2",
    "pre-commit>=4.0.1,<5",
    "pytest>=8.3.3,<9",
    "yamlfix>=1.17.0,<2",
]

[tool.uv]
conflicts = [
    [
        { extra = "torch-cpu" },
        { extra = "torch-cu126" },
        { extra = "torch-cu128" },
        { extra = "torch-cu130" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "torch-cpu" },
    { index = "torch-cu126", extra = "torch-cu126" },
    { index = "torch-cu128", extra = "torch-cu128" },
    { index = "torch-cu130", extra = "torch-cu130" },
]
f9columnar = { git = "https://gitlab.cern.ch/ijs-f9-ljubljana/F9Columnar.git", branch = "v0.3.15" }

[tool.ruff]
src = ["seesawml"]
target-version = "py312"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
ignore = [
    "D203",   # one-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "FBT001", # boolean-positional-arg-in-function-definition
    "FBT002", # boolean-default-value-in-function-definition
    "N812",   # lowercase-imported-as-non-lowercase
    "S301",   # suspicious-pickle-usage
    "S603",   # subprocess-without-shell-equals-true
    "E731",   # lambda assignment
    "E203",   # whitespace before ':'
    "E402",   # module level import not at top of file
    "E712",   # comparison to True
    "F401",   # module imported but unused
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "F841",   # local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/python"
explicit_package_bases = true
strict = false
pretty = true
no_implicit_reexport = false
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.yamlfix]
allow_duplicate_keys = true
line_length = 120
none_representation = "null"
explicit_start = false
section_whitelines = 1
comments_whitelines = 1
sequence_style = "block_style"
quote_basic_values = true
quote_representation = "'"

[project.scripts]
seesaw_ml_setup = "seesawml.utils.setup.run_setup:main"
condor_ml_sub = "seesawml.utils.submit.condor_submit:main"
pile_stats = "seesawml.utils.pile_statistics:main"
plot_piles = "seesawml.utils.plot_piles:main"
plot_fakes = "seesawml.fakes.dataset.plot_fakes:main"
plot_signal = "seesawml.signal.dataset.plot_signal:main"
plot_toy_fakes = "seesawml.fakes.toys.plotting:main"
convert_toy_fakes = "seesawml.fakes.toys.make_dataset:main"
convert_fakes = "seesawml.fakes.dataset.hdf5_converter:main"
convert_open_data = "seesawml.fakes.dataset.hdf5_opendata_converter:main"
scale_fakes = "seesawml.fakes.dataset.dataset_scaling:main"
train_fakes_model = "seesawml.fakes.training.fakes_trainer:main"
train_fakes = "seesawml.fakes.training.run_training:main"
train_pt_sliced_fakes = "seesawml.fakes.training.run_pt_sliced_training:main"
fakes_closure = "seesawml.fakes.analysis.ratio_closure:main"
fakes_opendata_SR = "seesawml.fakes.analysis.opendata_SR:main"
plot_fakes_model_ff = "seesawml.fakes.analysis.plot_model_ff:main"
plot_fakes_density_ratio = "seesawml.fakes.analysis.plot_density_ratio:main"
onnx_fakes = "seesawml.fakes.models.model_to_onnx:main"
convert_signal = "seesawml.signal.dataset.hdf5_converter:main"
calculate_class_weights = "seesawml.signal.dataset.class_weights:main"
calculate_quantiles = "seesawml.signal.dataset.quantiles:main"
scale_signal = "seesawml.signal.dataset.dataset_scaling:main"
train_signal = "seesawml.signal.training.sig_bkg_trainer:main"
calibrate_signal = "seesawml.signal.training.calibrate:main"
plot_pairwise = "seesawml.signal.dataset.plot_pairwise:main"
onnx_signal = "seesawml.signal.models.model_to_onnx:main"
download_open_data = "seesawml.utils.download_open_data:main"
